[package]
name = "json-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
